--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,12 @@ a {
 * {
   box-sizing: border-box;
 }
+html {
+  color-scheme: dark;
+}
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
